Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44357

Windows Phone: QNetworkAccessManager stops downloading after a random amount of time

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.3, 5.7.1, 5.8.0 RC
    • 5.6.1, 5.7.0 RC
    • Network
    • None
    • Lumia 920, Lumia 950 (Windows Phone 10)
    • WinRT
    • 05fd7f8d902eb736f3f5f96b2f5b3af1fe54c439 e1f29814daf1ea81b05cc95cc5d187eea362af67 b787977ba0c266c157db9d0275e0fe9b7ae5d35f

      The QNetworkAccessManager stops downloading after a random amount of time on Windows Phone 8.1. No signal (e.g. finished()) is emitted when the download stops. The problem occurs with different servers. The problem can also be reproduced when using a simple QTcpSocket for download.

      The attached code can be used as follows to start a download:
      WinrtDownloadTest* dl = new WinrtDownloadTest(this);
      dl->download("http://ubuntu.lagis.at/releases/14.04.1/ubuntu-14.04.1-desktop-amd64.iso");

      The app crashes (after a while) with the following output:
      <code>
      The thread 0xd00 has exited with code 0 (0x0).
      The thread 0xd24 has exited with code 0 (0x0).
      First-chance exception at 0x771D210B in winrtdownloadproblem.exe: Microsoft C++ exception: std::bad_alloc at memory location 0x05ABF290.
      'winrtdownloadproblem.exe' (Win32): Loaded 'C:\Windows\system32\errorhandlingext.dll'. Cannot find or open the PDB file.
      'winrtdownloadproblem.exe' (Win32): Loaded 'C:\Windows\system32\TDH.DLL'. Cannot find or open the PDB file.
      Unhandled exception at 0x771D210B in winrtdownloadproblem.exe: Microsoft C++ exception: std::bad_alloc at memory location 0x05ABF290.
      </code>

        1. nwtest.zip
          3 kB
          Peter Staab
        2. qnativesocketengine_winrt_p.h
          9 kB
          Peter Staab
        3. qnativesocketengine_winrt.cpp
          49 kB
          Peter Staab
        4. winrtdownload.zip
          1 kB
          Peter Staab
        5. winrtdownloadproblem.zip
          4 kB
          Peter Staab
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes